--- a/public/index.html
+++ b/public/index.html
@@ -220,7 +220,7 @@
                                 
                                 <div class="item mb-3">
                                     <div class="item-heading row align-items-center mb-2">
-                                        <h4 class="item-title col-12 col-md-12 col-lg-12 mb-2 mb-md-0">Scholarship</h4>
+                                        <h4 class="item-title col-12 col-md-12 col-lg-12 mb-2 mb-md-0">Scholarship-Accomplishments</h4>
                                     </div>
                                     <div class="item-content">
                                         <p></p>
